--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,12 +29,12 @@ h6 {
 a {
   color: #1e1e1e;
   text-decoration: none;
-  transition: all 0.5s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 a:hover {
   color: #ffd500;
   text-decoration: none;
-  transition: all 0.5s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 
 .p-r {
@@ -136,11 +136,15 @@ a:hover {
 }
 
 .sect-pt4 {
-  padding-top: 4rem;
+  padding-top: 8rem;
 }
 
 .sect-mt4 {
   margin-top: 4rem;
+}
+
+.sect-pb4 {
+  padding-bottom: 8rem;
 }
 
 /*--/ Title s /--*/
@@ -329,7 +333,7 @@ a:hover {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #0078ff;
+  background: #ffd500;
   width: 40px;
   height: 40px;
   border-radius: 50px;
@@ -337,7 +341,7 @@ a:hover {
 }
 .back-to-top i {
   font-size: 28px;
-  color: #fff;
+  color: #060606;
   line-height: 0;
 }
 .back-to-top:hover {
@@ -532,61 +536,6 @@ a:hover {
 .navbar li:hover > a {
   color: #ffd500;
 }
-.navbar .dropdown ul {
-  display: block;
-  position: absolute;
-  left: 30px;
-  top: calc(100% + 30px);
-  margin: 0;
-  padding: 10px 0;
-  z-index: 99;
-  opacity: 0;
-  visibility: hidden;
-  background: #fff;
-  box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
-  transition: 0.3s;
-}
-.navbar .dropdown ul li {
-  min-width: 200px;
-}
-.navbar .dropdown ul a {
-  padding: 10px 20px;
-  font-size: 14px;
-  text-transform: none;
-  color: #4e4e4e;
-}
-.navbar .dropdown ul a i {
-  font-size: 12px;
-}
-.navbar .dropdown ul a:hover,
-.navbar .dropdown ul .active:hover,
-.navbar .dropdown ul li:hover > a {
-  color: #0078ff;
-}
-.navbar .dropdown:hover > ul {
-  opacity: 1;
-  top: 100%;
-  visibility: visible;
-}
-.navbar .dropdown .dropdown ul {
-  top: 0;
-  left: calc(100% - 30px);
-  visibility: hidden;
-}
-.navbar .dropdown .dropdown:hover > ul {
-  opacity: 1;
-  top: 0;
-  left: 100%;
-  visibility: visible;
-}
-@media (max-width: 1366px) {
-  .navbar .dropdown .dropdown ul {
-    left: -90%;
-  }
-  .navbar .dropdown .dropdown:hover > ul {
-    left: -100%;
-  }
-}
 
 /**
 * Mobile Navigation 
@@ -706,11 +655,11 @@ a:hover {
 .hero .hero-title {
   color: #fff;
   font-weight: 600;
-  font-size: 3rem;
+  font-size: 3.5rem;
 }
 @media (min-width: 768px) {
   .hero .hero-title {
-    font-size: 4.5rem;
+    font-size: 5rem;
   }
 }
 .hero .hero-subtitle {
@@ -758,35 +707,48 @@ a:hover {
 /*--------------------------------------------------------------
 # About
 --------------------------------------------------------------*/
-.about-mf .box-shadow-full {
-  padding-top: 4rem;
-  padding-bottom: 4rem;
+.about-tag {
+  font-weight: 600;
+  letter-spacing: 4px;
+  margin-bottom: 1rem;
 }
-.about-mf .about-img {
-  margin-bottom: 2rem;
+.tag-bg {
+  background-image: linear-gradient(90deg, #ffd5003a 0%, #ffaa003a 98%);
+  padding: 0.5rem 1rem;
+  border-radius: 100px;
+  font-size: 12px;
 }
-.about-mf .about-img img {
-  margin-left: 10px;
+.about-title {
+  font-size: 2.5rem;
+  padding: 1rem 0;
 }
-@media (min-width: 767px) {
-  .about-mf .box-pl2 {
-    margin-top: 3rem;
-    padding-left: 0rem;
+
+@media (min-width: 576px) {
+  .about-title {
+    font-size: 3.5rem;
+  }
+}
+@media (min-width: 768px) {
+  .about-title {
+    font-size: 4rem;
   }
 }
 
-.skill-mf span {
-  color: #4e4e4e;
+.about-p {
+  color: #969696;
+  font-size: 1rem;
+  line-height: 160%;
+  margin-bottom: 0;
 }
-.skill-mf .progress {
-  background-color: #cde1f8;
-  margin: 0.5rem 0 1.2rem 0;
-  border-radius: 0;
-  height: 0.7rem;
+
+.link {
+  color: #969696;
+  text-decoration: underline;
 }
-.skill-mf .progress .progress-bar {
-  height: 0.7rem;
-  background-color: #0078ff;
+
+.about-p-center {
+  display: flex;
+  align-items: center;
 }
 
 /*--------------------------------------------------------------
