--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,7 +101,7 @@ a:hover {
 }
 
 .overlay-mf {
-  background-color: #0078ff;
+  background-color: #241e00;
 }
 
 .overlay-mf {
@@ -136,7 +136,7 @@ a:hover {
 }
 
 .sect-pt4 {
-  padding-top: 8rem;
+  padding-top: 5rem;
 }
 
 .sect-mt4 {
@@ -144,7 +144,7 @@ a:hover {
 }
 
 .sect-pb4 {
-  padding-bottom: 8rem;
+  padding-bottom: 5rem;
 }
 
 /*--/ Title s /--*/
@@ -162,8 +162,8 @@ a:hover {
 .title-a {
   text-decoration: none;
   font-size: 3rem;
-  font-weight: bold;
-  text-transform: uppercase;
+  font-weight: 500;
+  padding: 1rem 0;
 }
 
 .subtitle-a {
@@ -191,7 +191,7 @@ a:hover {
   content: '';
   position: absolute;
   height: 3px;
-  background-color: #0078ff;
+  background-color: #ffd500;
   width: 100px;
   bottom: -12px;
 }
@@ -204,8 +204,9 @@ a:hover {
 .box-shadow-full {
   padding: 3rem 1.25rem;
   position: relative;
-  background-color: #fff;
+  background-color: #111111;
   margin-bottom: 3rem;
+  border-radius: 1rem;
   z-index: 2;
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.06), 0 2px 5px 0 rgba(0, 0, 0, 0.2);
 }
@@ -229,13 +230,17 @@ a:hover {
   border-radius: 50%;
   line-height: 1.6;
   margin: 0 15px 0 0;
-  box-shadow: 0 0 0 3px #0078ff;
+  box-shadow: 0 0 0 3px #ffd500;
   transition: all 500ms ease;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .socials .ico-circle:hover {
-  background-color: #0078ff;
-  color: #fff;
-  box-shadow: 0 0 0 3px #cde1f8;
+  background-color: #443903;
+  color: #ffd500;
+  box-shadow: 0 0 0 3px #ffd500;
   transition: all 500ms ease;
 }
 
@@ -269,7 +274,7 @@ a:hover {
   line-height: 1.55;
   margin: 0 auto;
   text-align: center;
-  box-shadow: 0 0 0 10px #0078ff;
+  box-shadow: 0 0 0 10px #ffd500;
   display: block;
 }
 
@@ -345,7 +350,7 @@ a:hover {
   line-height: 0;
 }
 .back-to-top:hover {
-  background: #298eff;
+  background: #ffe876;
   color: #fff;
 }
 .back-to-top.active {
@@ -707,7 +712,7 @@ a:hover {
 /*--------------------------------------------------------------
 # About
 --------------------------------------------------------------*/
-.about-tag {
+.tag {
   font-weight: 600;
   letter-spacing: 4px;
   margin-bottom: 1rem;
@@ -723,14 +728,10 @@ a:hover {
   padding: 1rem 0;
 }
 
-@media (min-width: 576px) {
-  .about-title {
-    font-size: 3.5rem;
-  }
-}
 @media (min-width: 768px) {
   .about-title {
     font-size: 4rem;
+    padding: 0;
   }
 }
 
@@ -755,21 +756,22 @@ a:hover {
 # Services
 --------------------------------------------------------------*/
 .service-box {
-  background-color: #fff;
+  background-color: #111111;
   padding: 2.5rem 1.3rem;
   border-radius: 1rem;
   margin-bottom: 3rem;
   text-align: center;
 }
+
 .service-box:hover .ico-circle {
   transition: all 500ms ease;
-  color: #fff;
-  background-color: #0078ff;
-  box-shadow: 0 0 0 10px #cde1f8;
+  color: #ffd500;
+  background-color: #443903;
+  box-shadow: 0 0 0 10px #ffe876;
 }
 .service-box .service-ico {
   margin-bottom: 1rem;
-  color: #1e1e1e;
+  color: #ffffff;
 }
 .service-box .ico-circle {
   transition: all 500ms ease;
@@ -783,12 +785,12 @@ a:hover {
 }
 .service-box .s-title {
   font-size: 1.4rem;
-  text-transform: uppercase;
   text-align: center;
   padding: 0.4rem 0;
+  color: #fff;
 }
 .service-box .s-description {
-  color: #4e4e4e;
+  color: #6e6e6e;
 }
 
 /*--------------------------------------------------------------
@@ -826,10 +828,12 @@ a:hover {
   margin-bottom: 3rem;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
-  background-color: #fff;
+  background-color: #111111;
+  border-radius: 1rem;
+  overflow: hidden;
 }
 .work-box:hover img {
-  transform: scale(1.3);
+  transform: scale(1.2);
 }
 
 .work-img {
@@ -846,17 +850,18 @@ a:hover {
 .work-content .w-more {
   color: #4e4e4e;
   font-size: 0.8rem;
+  letter-spacing: 1px;
 }
 .work-content .w-more .w-ctegory {
-  color: #0078ff;
+  color: #969696;
 }
 .work-content .w-like {
   font-size: 2.5rem;
-  color: #0078ff;
+  color: #ffd500;
   float: right;
 }
 .work-content .w-like a {
-  color: #0078ff;
+  color: #ffd500;
 }
 .work-content .w-like .num-like {
   font-size: 0.7rem;
@@ -864,6 +869,7 @@ a:hover {
 
 .w-title {
   font-size: 1.2rem;
+  font-weight: 500;
 }
 
 /*--------------------------------------------------------------
@@ -1041,7 +1047,7 @@ a:hover {
 }
 .php-email-form input:focus,
 .php-email-form textarea:focus {
-  border-color: #0078ff;
+  border-color: #ffd500;
 }
 .php-email-form input {
   padding: 10px 15px;
@@ -1051,14 +1057,14 @@ a:hover {
   margin-bottom: 0;
 }
 .php-email-form button[type='submit'] {
-  background: #0078ff;
+  background: #ffd500;
   border: 0;
   padding: 10px 24px;
-  color: #fff;
+  color: #060606;
   transition: 0.4s;
 }
 .php-email-form button[type='submit']:hover {
-  background: #3393ff;
+  background: #d6b300;
 }
 
 @-webkit-keyframes animate-loading {
@@ -1271,7 +1277,7 @@ footer {
   text-align: center;
   color: #fff;
   padding: 25px 0;
-  background: #0062d3;
+  background: #ffd50021;
 }
 footer .copyright {
   margin-bottom: 0.3rem;
